# dioxus-extism

./: API_NOTES.md  CLAUDE.md  Cargo.toml  README.md  TESTING_PLAN.md  dioxus-extism-architecture.md
.devcontainer/: Dockerfile  Dockerfile.base  devcontainer.json  docker-compose.yml
.devcontainer/scripts/: post-start.sh
crates/dioxus-extism-frontend/: Cargo.toml
crates/dioxus-extism-frontend/src/: components.rs  lib.rs  server_fns.rs  session.rs
crates/dioxus-extism-host/: Cargo.toml
crates/dioxus-extism-host/benches/: runtime_benchmarks.rs
crates/dioxus-extism-host/src/: error.rs  host_functions.rs  lib.rs  manifest_extension.rs  persistence.rs  runtime.rs  tree.rs  trust.rs
crates/dioxus-extism-host/tests/: builder.rs  correctness.rs  custom_capabilities.rs  generic_dispatch.rs  install_config.rs  manifest_extensions.rs  metrics.rs  persistence.rs  plugin_loading.rs  registry_api.rs  resolve_component.rs  route_replace.rs  route_transforms.rs  security.rs  transform_registry.rs  tree.rs  trust_tags.rs
crates/dioxus-extism-macros/: Cargo.toml
crates/dioxus-extism-macros/src/: lib.rs
crates/dioxus-extism-macros/tests/: overridable_tests.rs
crates/dioxus-extism-macros/tests/overridable/fail/: impl_trait.rs  impl_trait.stderr
crates/dioxus-extism-macros/tests/overridable/pass/: basic.rs
crates/dioxus-extism-pdk/: Cargo.toml
crates/dioxus-extism-pdk/src/: error.rs  lib.rs  view.rs
crates/dioxus-extism-protocol/: Cargo.toml
crates/dioxus-extism-protocol/src/: lib.rs
crates/dioxus-extism-protocol/tests/: route_pattern.rs
crates/dioxus-extism-test/: Cargo.toml
crates/dioxus-extism-test/src/: lib.rs
dioxus-extism/: Cargo.toml
dioxus-extism/src/: lib.rs
docs/plans/: HANDOFF.md  plugin-platform.md
docs/rfcs/: HANDOFF.md  host-agnostic-extensions.md
examples/hello-plugin/: README.md
examples/hello-plugin/host/: Cargo.toml  Dioxus.toml
examples/hello-plugin/host/src/: main.rs
examples/hello-plugin/plugin/: Cargo.toml
examples/hello-plugin/plugin/src/: lib.rs
examples/notes-plugin/: README.md
examples/notes-plugin/host/: Cargo.toml  Dioxus.toml
examples/notes-plugin/host/src/: main.rs
examples/notes-plugin/plugin/: Cargo.toml
examples/notes-plugin/plugin/src/: lib.rs
examples/route-injection-example/: README.md
examples/route-injection-example/host/: Cargo.toml  Dioxus.toml
examples/route-injection-example/host/src/: main.rs
examples/route-injection-example/plugin/: Cargo.toml
examples/route-injection-example/plugin/src/: lib.rs
examples/showcase/: README.md
examples/showcase/host/: Cargo.toml  Dioxus.toml
examples/showcase/host/src/: main.rs
examples/showcase/plugin-comments/: Cargo.toml
examples/showcase/plugin-comments/src/: lib.rs
examples/showcase/plugin-stats/: Cargo.toml
examples/showcase/plugin-stats/src/: lib.rs
examples/ssr-example/: Cargo.toml
examples/ssr-example/src/: main.rs
examples/tree-selector-example/: README.md
examples/tree-selector-example/host/: Cargo.toml  Dioxus.toml
examples/tree-selector-example/host/src/: main.rs
examples/tree-selector-example/plugin_a/: Cargo.toml
examples/tree-selector-example/plugin_a/src/: lib.rs
examples/tree-selector-example/plugin_b/: Cargo.toml
examples/tree-selector-example/plugin_b/src/: lib.rs
fixtures/fixture-blocking-slot/: Cargo.toml
fixtures/fixture-blocking-slot/src/: lib.rs
fixtures/fixture-cap-global-write-denied/: Cargo.toml
fixtures/fixture-cap-global-write-denied/src/: lib.rs
fixtures/fixture-cap-invoke-a/: Cargo.toml
fixtures/fixture-cap-invoke-a/src/: lib.rs
fixtures/fixture-cap-invoke-b/: Cargo.toml
fixtures/fixture-cap-invoke-b/src/: lib.rs
fixtures/fixture-cap-invoke-denied/: Cargo.toml
fixtures/fixture-cap-invoke-denied/src/: lib.rs
fixtures/fixture-cap-plugin-state-read/: Cargo.toml
fixtures/fixture-cap-plugin-state-read/src/: lib.rs
fixtures/fixture-cap-state-owner/: Cargo.toml
fixtures/fixture-cap-state-owner/src/: lib.rs
fixtures/fixture-echo-fn/: Cargo.toml
fixtures/fixture-echo-fn/src/: lib.rs
fixtures/fixture-failing-on-load/: Cargo.toml
fixtures/fixture-failing-on-load/src/: lib.rs
fixtures/fixture-high-app-version/: Cargo.toml
fixtures/fixture-high-app-version/src/: lib.rs
fixtures/fixture-high-protocol-version/: Cargo.toml
fixtures/fixture-high-protocol-version/src/: lib.rs
fixtures/fixture-hook-after-cancel/: Cargo.toml
fixtures/fixture-hook-after-cancel/src/: lib.rs
fixtures/fixture-hook-cancel/: Cargo.toml
fixtures/fixture-hook-cancel/src/: lib.rs
fixtures/fixture-hook-continue/: Cargo.toml
fixtures/fixture-hook-continue/src/: lib.rs
fixtures/fixture-hook-erroring/: Cargo.toml
fixtures/fixture-hook-erroring/src/: lib.rs
fixtures/fixture-hook-replace/: Cargo.toml
fixtures/fixture-hook-replace/src/: lib.rs
fixtures/fixture-route-replace/: Cargo.toml
fixtures/fixture-route-replace/src/: lib.rs
fixtures/fixture-slot-failing/: Cargo.toml
fixtures/fixture-slot-failing/src/: lib.rs
fixtures/fixture-slot-high/: Cargo.toml
fixtures/fixture-slot-high/src/: lib.rs
fixtures/fixture-slot-normal/: Cargo.toml
fixtures/fixture-slot-normal/src/: lib.rs
fixtures/fixture-with-extension/: Cargo.toml
fixtures/fixture-with-extension/src/: lib.rs
fixtures/fixture-within-selector/: Cargo.toml
fixtures/fixture-within-selector/src/: lib.rs
fixtures/fixture-wrap-a/: Cargo.toml
fixtures/fixture-wrap-a/src/: lib.rs
fixtures/fixture-wrap-b/: Cargo.toml
fixtures/fixture-wrap-b/src/: lib.rs
fixtures/fixture-wrap-failing/: Cargo.toml
fixtures/fixture-wrap-failing/src/: lib.rs
fixtures/fixture-wrap-no-content/: Cargo.toml
fixtures/fixture-wrap-no-content/src/: lib.rs
tasks/: phase-1-foundation.md  phase-2-behaviour.md  phase-3-layer1.md  phase-4-5-6.md
