[package]
name = "dioxus-extism-frontend"
version = "0.1.0"
edition = "2024"

[features]
default = ["web", "server"]
web    = ["dioxus/web"]
server = ["dioxus/server"]

[dependencies]
dioxus                 = { workspace = true }
dioxus-extism-protocol = { path = "../dioxus-extism-protocol" }
dioxus-extism-macros   = { path = "../dioxus-extism-macros" }
serde                  = { workspace = true }
serde_json             = { workspace = true }
tracing                = { workspace = true }
uuid                   = { workspace = true }

[lints]
workspace = true
