[package]
name = "dioxus-extism-frontend"
version = "0.1.0"
edition = "2024"

[features]
default = ["web"]
web    = ["dioxus/web"]
server = ["dioxus/server"]

[dependencies]
dioxus                 = { workspace = true, features = ["router"] }
dioxus-extism-protocol = { path = "../dioxus-extism-protocol" }
dioxus-extism-macros   = { path = "../dioxus-extism-macros" }
serde                  = { workspace = true }
serde_json             = { workspace = true }
tracing                = { workspace = true }
uuid                   = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dioxus-extism-host = { path = "../dioxus-extism-host" }
axum               = { workspace = true }
keyring            = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Window", "Location"] }
uuid    = { version = "1", features = ["v4", "js"] }

[lints]
workspace = true
