[package]
name = "dioxus-extism-host"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow                 = { workspace = true }
extism                 = { workspace = true }
dioxus-extism-protocol = { path = "../dioxus-extism-protocol" }
tokio                  = { workspace = true }
serde                  = { workspace = true }
serde_json             = { workspace = true }
thiserror              = { workspace = true }
indexmap               = { workspace = true }
axum                   = { workspace = true }
tracing                = { workspace = true }
sha2                   = { workspace = true }
reqwest                = { workspace = true }
async-trait            = { workspace = true }
futures                = { workspace = true }

[dev-dependencies]
tokio      = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
