[package]
name = "dioxus-extism-macros"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
syn        = { workspace = true }
quote      = { workspace = true }
proc-macro2 = { workspace = true }

[dev-dependencies]
trybuild               = { workspace = true }
dioxus                 = { workspace = true }
dioxus-extism-frontend = { path = "../dioxus-extism-frontend", default-features = false, features = ["server"] }
serde_json             = { workspace = true }

[lints]
workspace = true
