[package]
name = "dioxus-extism-pdk"
version = "0.1.0"
edition = "2024"

[dependencies]
extism-pdk             = { workspace = true }
dioxus-extism-protocol = { path = "../dioxus-extism-protocol" }
serde                  = { workspace = true }
serde_json             = { workspace = true }
thiserror              = { workspace = true }

[lints]
workspace = true
